k8s/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
  namespace: vega
spec:
  stripPrefix:
    prefixes:
      - /users-api
      - /products-api
      - /cart-api
      - /orders-api
